version/0.18/_sources/api/solver/_autosummary/settings/set_velocity_and_vof_cutoffs.rst.txt
:orphan:

.. _set_velocity_and_vof_cutoffs:

set_velocity_and_vof_cutoffs
============================

.. autoclass:: ansys.fluent.core.solver.settings_232.set_velocity_and_vof_cutoffs.set_velocity_and_vof_cutoffs
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`set_velocity_and_vof_cutoffs_child <set_velocity_and_vof_cutoffs_child>`


.. rubric:: Included in:

================================================================   ========================================================

Parent                                                                                                              Summary

================================================================   ========================================================
:ref:`velocity_limiting_treatment <velocity_limiting_treatment>`       Velocity limiting related stabiity controls for VOF.

================================================================   ========================================================

