version/0.19/_sources/api/solver/_autosummary/settings/set_velocity_and_vof_cutoffs.rst.txt
:orphan:

.. _set_velocity_and_vof_cutoffs:

set_velocity_and_vof_cutoffs
============================

.. autoclass:: ansys.fluent.core.solver.settings_241.set_velocity_and_vof_cutoffs.set_velocity_and_vof_cutoffs
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`set_velocity_and_vof_cutoffs_child <set_velocity_and_vof_cutoffs_child>`


.. rubric:: Included in:

================================================================   ========================================================

Parent                                                                                                              Summary

================================================================   ========================================================
:ref:`velocity_limiting_treatment <velocity_limiting_treatment>`       Velocity limiting related stabiity controls for VOF.

================================================================   ========================================================

